--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-yo yo
+<head>
+    <title>PlayStationDiscord</title>
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Discord Rich Presence for PlayStation consoles.">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PlayStationDiscord" />
+    <meta property="og:description" content="Discord Rich Presence for PlayStation consoles" />
+    <meta property="og:url" content="https://tusticles.com/PlayStationDiscord/" />
+    <meta property="og:image" content="https://tusticles.com/PlayStationDiscord/assets/images/ps4.jpg" />
+
+    <link rel="stylesheet" type="text/css" href="assets/site.css" />
+</head>
+
+<body>
+    <h1>PlayStationDiscord</h1>
+    <h3 class="tagline">Discord Rich Presence for PlayStation consoles.</h3>
+</body>
