Add incomplete Front-End

--- a/index.html
+++ b/index.html
@@ -1,17 +1,61 @@
-<head>
-    <title>PlayStationDiscord</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Discord Rich Presence for PlayStation consoles.">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="PlayStationDiscord" />
-    <meta property="og:description" content="Discord Rich Presence for PlayStation consoles" />
-    <meta property="og:url" content="https://tusticles.com/PlayStationDiscord/" />
-    <meta property="og:image" content="https://tusticles.com/PlayStationDiscord/assets/images/ps4.jpg" />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <meta name="theme-color" content="#7289DA" />
+        <!--
+            manifest.json provides metadata used when your web app is added to the
+            homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+        -->
+        <link rel="manifest" href="assets/manifest.json" />
+        <link rel="shortcut icon" href="assets/favicon.ico" />
 
-    <link rel="stylesheet" type="text/css" href="assets/site.css" />
-</head>
+        <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans"
+            rel="stylesheet"
+        />
 
-<body>
-    <h1>PlayStationDiscord</h1>
-    <h3 class="tagline">Discord Rich Presence for PlayStation consoles.</h3>
-</body>
+        <link href="assets/css/index.css" rel="stylesheet" type="text/css" />
+
+        <title>PlayStation Discord</title>
+    </head>
+
+    <body>
+        <main class="landing">
+            <h1 class="title">PlayStationDiscord</h1>
+            <p class="tagline">
+                Discord Rich Presence for PlayStation consoles.
+            </p>
+            <a
+                href="https://github.com/Tustin/PlaystationDiscord/releases/latest"
+                target="_blank"
+            >
+                <button class="download-button">Download for Windows</button>
+            </a>
+            <div class="social">
+                <a href="https://twitter.com/Tusticles" target="_blank" rel="noopener noreferrer">
+                    <img class="icon" src="./assets/images/twitter.png" alt="Twitter" />
+                </a>
+                <a href="https://github.com/Tustin/PlayStationDiscord" target="_blank" rel="noopener noreferrer">
+                    <img class="icon" src="./assets/images/github.png" alt="GitHub" />
+                </a>
+            </div>
+        </main>
+
+        <div class="showcase">
+            <div class="playstation-3">
+                <h2 class="platform-title">PlayStation 3</h2>
+            </div>
+            <div class="playstation-4">
+                <h2 class="platform-title">PlayStation 4</h2>
+            </div>
+            <div class="playstation-vita">
+                <h2 class="platform-title">PlayStation Vita</h2>
+            </div>
+        </div>
+    </body>
+</html>
