--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         <div class="showcase">
             <div class="playstation-3">
-                <h2 class="platform-title">PlayStation 3</h2>
+                <h2 class="platform-title"><img src="./assets/images/previews/ps3.png"/></h2>
             </div>
             <div class="playstation-4">
-                <h2 class="platform-title">PlayStation 4</h2>
+                <h2 class="platform-title"><img src="./assets/images/previews/ps4.png"/></h2>
             </div>
             <div class="playstation-vita">
                 <h2 class="platform-title">PlayStation Vita</h2>
