flex and credits

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <link href="assets/css/index.css" rel="stylesheet" type="text/css" />
 
         <title>PlayStation Discord</title>
+        
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Discord Rich Presence for PlayStation consoles.">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="PlayStationDiscord" />
+        <meta property="og:description" content="Discord Rich Presence for PlayStation consoles" />
+        <meta property="og:url" content="https://tusticles.com/PlayStationDiscord/" />
+        <meta property="og:image" content="https://tusticles.com/PlayStationDiscord/assets/images/ps4.jpg" />
     </head>
 
     <body>
@@ -48,14 +56,22 @@
 
         <div class="showcase">
             <div class="playstation-3">
-                <h2 class="platform-title"><img src="./assets/images/previews/ps3.png"/></h2>
+                <img src="./assets/images/previews/ps3.png"/>
+                <h2 class="platform-title">PlayStation 3</h2>
             </div>
             <div class="playstation-4">
-                <h2 class="platform-title"><img src="./assets/images/previews/ps4.png"/></h2>
+                <img src="./assets/images/previews/ps4.png"/>
+                <h2 class="platform-title">PlayStation 4</h2>
             </div>
             <div class="playstation-vita">
                 <h2 class="platform-title">PlayStation Vita</h2>
             </div>
         </div>
     </body>
+
+    <footer>
+        <p class="credit">
+            Designed by <a href="https://twitter.com/Mxtive" target="_blank">Mxtive</a>
+        </p>
+    </footer>
 </html>
