--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <h2 class="platform-title">PlayStation 4</h2>
             </div>
             <div class="playstation-vita">
+                <img src="./assets/images/previews/vita.png"/>
                 <h2 class="platform-title">PlayStation Vita</h2>
             </div>
         </div>
