--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         -->
         <link rel="manifest" href="assets/manifest.json" />
         <link rel="shortcut icon" href="assets/favicon.ico" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <link
             href="https://fonts.googleapis.com/css?family=Open+Sans"
@@ -54,6 +55,35 @@
             </div>
         </main>
 
+        <div class="carousel slide container" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div id="game1">
+                    <img class="d-block w-100" src="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3></h3>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div id="game2">
+                    <img class="d-block w-100" src="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3></h3>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div id="game3">
+                    <img class="d-block w-100" src="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3></h3>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
         <div class="showcase">
             <div class="playstation-3">
                 <img src="./assets/images/previews/ps3.png"/>
@@ -68,6 +98,11 @@
                 <h2 class="platform-title">PlayStation Vita</h2>
             </div>
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="assets/js/code.js"></script>
     </body>
 
     <footer>
