--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         -->
         <link rel="manifest" href="assets/manifest.json" />
         <link rel="shortcut icon" href="assets/favicon.ico" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
         <link
             href="https://fonts.googleapis.com/css?family=Open+Sans"
@@ -55,7 +55,7 @@
             </div>
         </main>
 
-        <div class="carousel slide container" data-ride="carousel">
+        <!-- <div class="carousel slide container" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div id="game1">
@@ -82,7 +82,7 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="showcase">
             <div class="playstation-3">
@@ -99,10 +99,10 @@
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="assets/js/code.js"></script>
+        <script src="assets/js/code.js"></script> -->
     </body>
 
     <footer>
