Minor visual fixes, mobile responsiveness, formatting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         -->
         <link rel="manifest" href="assets/manifest.json" />
         <link rel="shortcut icon" href="assets/favicon.ico" />
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"
+        />
 
         <link
             href="https://fonts.googleapis.com/css?family=Open+Sans"
@@ -23,14 +28,26 @@
         <link href="assets/css/index.css" rel="stylesheet" type="text/css" />
 
         <title>PlayStation Discord</title>
-        
-        <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Discord Rich Presence for PlayStation consoles.">
-        <meta property="og:type" content="website">
+
+        <meta name="viewport" content="width=device-width" />
+        <meta
+            name="description"
+            content="Discord Rich Presence for PlayStation consoles."
+        />
+        <meta property="og:type" content="website" />
         <meta property="og:title" content="PlayStationDiscord" />
-        <meta property="og:description" content="Discord Rich Presence for PlayStation consoles" />
-        <meta property="og:url" content="https://tusticles.com/PlayStationDiscord/" />
-        <meta property="og:image" content="https://tusticles.com/PlayStationDiscord/assets/images/ps4.jpg" />
+        <meta
+            property="og:description"
+            content="Discord Rich Presence for PlayStation consoles"
+        />
+        <meta
+            property="og:url"
+            content="https://tusticles.com/PlayStationDiscord/"
+        />
+        <meta
+            property="og:image"
+            content="https://tusticles.com/PlayStationDiscord/assets/images/ps4.jpg"
+        />
     </head>
 
     <body>
@@ -46,68 +63,97 @@
                 <button class="download-button">Download for Windows</button>
             </a>
             <div class="social">
-                <a href="https://twitter.com/Tusticles" target="_blank" rel="noopener noreferrer">
-                    <img class="icon" src="./assets/images/twitter.png" alt="Twitter" />
+                <a
+                    href="https://twitter.com/Tusticles"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <img
+                        class="icon"
+                        src="./assets/images/twitter.png"
+                        alt="Twitter"
+                    />
                 </a>
-                <a href="https://github.com/Tustin/PlayStationDiscord" target="_blank" rel="noopener noreferrer">
-                    <img class="icon" src="./assets/images/github.png" alt="GitHub" />
+                <a
+                    href="https://github.com/Tustin/PlayStationDiscord"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <img
+                        class="icon"
+                        src="./assets/images/github.png"
+                        alt="GitHub"
+                    />
                 </a>
             </div>
         </main>
 
-        <!-- <div class="carousel slide container" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div id="game1">
-                    <img class="d-block w-100" src="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                    </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div id="game2">
-                    <img class="d-block w-100" src="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                    </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div id="game3">
-                    <img class="d-block w-100" src="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                    </div>
-                </div>
-              </div>
-            </div>
-        </div> -->
-
         <div class="showcase">
             <div class="playstation-3">
-                <img src="./assets/images/previews/ps3.png"/>
+                <img src="./assets/images/previews/ps3.png" />
                 <h2 class="platform-title">PlayStation 3</h2>
             </div>
             <div class="playstation-4">
-                <img src="./assets/images/previews/ps4.png"/>
+                <img src="./assets/images/previews/ps4.png" />
                 <h2 class="platform-title">PlayStation 4</h2>
             </div>
             <div class="playstation-vita">
-                <img src="./assets/images/previews/vita.png"/>
+                <img src="./assets/images/previews/vita.png" />
                 <h2 class="platform-title">PlayStation Vita</h2>
             </div>
         </div>
 
-        <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="assets/js/code.js"></script> -->
+        <!--
+            <div class="carousel slide container" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div id="game1">
+                            <img class="d-block" src="" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div id="game2">
+                            <img class="d-block" src="" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div id="game3">
+                            <img class="d-block" src="" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        -->
     </body>
 
     <footer>
         <p class="credit">
-            Designed by <a href="https://twitter.com/Mxtive" target="_blank">Mxtive</a>
+            Designed by
+            <a href="https://twitter.com/Mxtive" target="_blank">Mxtive</a>
         </p>
     </footer>
+
+    <!--
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
+        <script src="assets/js/carousel.js"></script>
+    -->
 </html>
