hey we got a loop going
aint that swell?

--- a/app.html
+++ b/app.html
@@ -12,6 +12,12 @@
 		</div>
 	</header>
 
+	<main>
+		<h3 id="onlineId"></h3>
+		<img id="avatar" />
+
+	</main>
+
 	<script src="dist/renderer.js"></script>
 	<script src="dist/titlebar.js"></script>
 </body>
