--- a/app.html
+++ b/app.html
@@ -13,8 +13,12 @@
 	</header>
 
 	<main>
-		<h3 id="onlineId"></h3>
 		<img id="avatar" />
+		<div>
+			<h3 id="onlineId"></h3>
+			<p>Status: <span id="details">Offline</span></p>
+			<p id="state"></p>
+		</div>
 	</main>
 
 	<script src="dist/renderer.js"></script>
