--- a/app.html
+++ b/app.html
@@ -13,11 +13,17 @@
 	</header>
 
 	<main>
-		<img id="avatar" />
-		<div>
-			<h3 id="onlineId"></h3>
-			<p>Status: <span id="details">Offline</span></p>
-			<p id="state"></p>
+		<div class="playstation-info">
+			<img id="avatar" />
+			<div class="presence-details">
+				<h3 id="onlineId"></h3>
+				<p>Status: <span id="details">Offline</span></p>
+				<p id="state"></p>
+			</div>
+		</div>
+
+		<div class="options">
+			<button class='ripple light-blue' id="togglePresence">Toggle Rich Presence</button>
 		</div>
 	</main>
 
