toggle presence and sign out

--- a/app.html
+++ b/app.html
@@ -23,8 +23,11 @@
         </div>
 
         <div class="options">
-            <button class="ripple" id="togglePresence">
-                Toggle Rich Presence
+            <button class="ripple red" id="togglePresence">
+                Disable Rich Presence
+            </button>
+            <button class="ripple" id="signOut">
+                Sign Out
             </button>
         </div>
     </main>
