new links and macos button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <meta name="theme-color" content="#7289DA" />
-        <!--
-            manifest.json provides metadata used when your web app is added to the
-            homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-        -->
         <link rel="manifest" href="assets/manifest.json" />
         <link rel="shortcut icon" href="assets/favicon.ico" />
         <link
@@ -26,6 +22,9 @@
         />
 
         <link href="assets/css/index.css" rel="stylesheet" type="text/css" />
+
+        <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/brands.js" integrity="sha384-zJ8/qgGmKwL+kr/xmGA6s1oXK63ah5/1rHuILmZ44sO2Bbq1V3p3eRTkuGcivyhD" crossorigin="anonymous"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/fontawesome.js" integrity="sha384-xl26xwG2NVtJDw2/96Lmg09++ZjrXPc89j0j7JHjLOdSwHDHPHiucUjfllW0Ywrq" crossorigin="anonymous"></script>
 
         <title>PlayStation Discord</title>
 
@@ -56,12 +55,25 @@
             <p class="tagline">
                 Discord Rich Presence for PlayStation consoles.
             </p>
+            <h2 class="title">Download Binaries</h2>
             <a
-                href="https://github.com/Tustin/PlaystationDiscord/releases/latest"
+                href="https://github.com/Tustin/PlayStationDiscord/releases/download/3.0.0/installer-PlayStationDiscord-3.0.0.exe"
                 target="_blank"
             >
-                <button class="download-button">Download for Windows</button>
+                <button class="download-button">
+                    <i class="fab fa-windows"></i>
+                    Windows
+                </button>
             </a>
+            <a
+            href="https://github.com/Tustin/PlayStationDiscord/releases/download/3.0.0/PlayStationDiscord-3.0.0.dmg"
+            target="_blank"
+        >
+            <button class="download-button">
+                <i class="fab fa-apple"></i>
+                macOS
+            </button>
+        </a>
             <div class="social">
                 <a
                     href="https://twitter.com/Tusticles"
