update download links and add linux

--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
                 Discord Rich Presence for PlayStation consoles.
             </p>
             <h2 class="title">Download Binaries</h2>
-            <a
-                href="https://github.com/Tustin/PlayStationDiscord/releases/download/3.0.2/installer-PlayStationDiscord-3.0.2.exe"
-                target="_blank"
-            >
+            <a href="https://github.com/Tustin/PlayStationDiscord/releases/download/v3.1.0/installer-PlayStationDiscord-3.1.0.exe" target="_blank">
                 <button class="download-button">
                     <i class="fab fa-windows"></i>
                     Windows
                 </button>
             </a>
-            <a
-            href="https://github.com/Tustin/PlayStationDiscord/releases/download/3.0.2/PlayStationDiscord-3.0.2.dmg"
-            target="_blank"
-        >
-            <button class="download-button">
-                <i class="fab fa-apple"></i>
-                macOS
-            </button>
-        </a>
+            <a href="https://github.com/Tustin/PlayStationDiscord/releases/download/v3.1.0/PlayStationDiscord-3.1.0.dmg" target="_blank">
+                <button class="download-button">
+                    <i class="fab fa-apple"></i>
+                    macOS
+                </button>
+            </a>
+            <a href="https://github.com/Tustin/PlayStationDiscord/releases/download/v3.1.0/PlayStationDiscord-3.1.0.AppImage" target="_blank">
+                <button class="download-button">
+                    <i class="fab fa-linux"></i>
+                    Linux (Snap)
+                </button>
+            </a>
             <div class="social">
                 <a
                     href="https://twitter.com/Tusticles"
