--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8 ;">
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
