landing progress and settings menu

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,12 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
         <meta http-equiv="content-type" content="text/html; charset=utf-8 ;">
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>PlayStationDiscord</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	</head>
 	<body>
-		<noscript>
-			<strong>We're sorry, but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-		</noscript>
 		<div id="app" v-cloak></div>
 	</body>
 </html>
