--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                 <img src="./assets/images/previews/ps4.png" />
                 <h2 class="platform-title">PlayStation 4</h2>
             </div>
+            <div class="playstation-5">
+                <img src="./assets/images/previews/ps5.png" />
+                <h2 class="platform-title">PlayStation 5</h2>
+            </div>
             <div class="playstation-vita">
                 <img src="./assets/images/previews/vita.png" />
                 <h2 class="platform-title">PlayStation Vita</h2>
